removes social media icon and font change

--- a/style.css
+++ b/style.css
@@ -342,7 +342,7 @@ p {
 	top: 0;
 	height: 100%;
 	width: 100%;
-	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+	background-image: linear-gradient(60deg, #29323c 10%, #485563 100%);
 	opacity: .9;
 	z-index: -1;
 }
@@ -353,7 +353,8 @@ p {
 }
 #services .service-item h2 {
 	font-size: 2rem;
-	color: rgba(255, 255, 255, 0.459);
+	font-weight: bold;
+	color: #f2f2f2;
 	margin-bottom: 10px;
 	text-transform: uppercase;
 }
